PIP-289 Update snomed-owl-toolkit version and add workaround fix for version 4